--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <!-- Title -->
   <section id="title" class="gradient-background">
     <div class="container col-xxl-8 px-4 pt-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" loading="lazy" />
+      <div class="row  flex-lg-row-reverse align-items-center g-5 pt-5">
+        <div class="col-10 mx-auto  col-sm-8 col-lg-6">
+          <img src="iphone.png" class="mx-auto d-block img-fluid" alt="Phone Image" loading="lazy" />
         </div>
-        <div class="col-lg-6">
-          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
+        <div class="col-lg-6 ">
+          <h1 class="display-5 px-4 fw-bold text-body-emphasis lh-1 mb-3">
             Meet new and interesting dogs nearby.
           </h1>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <div class="d-grid px-4 gap-2 d-md-flex pb-5 justify-content-md-start">
             <button type="button" class="btn btn-light btn-lg px-4 me-md-2">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-apple mb-1" viewBox="0 0 16 16">
@@ -107,13 +107,30 @@
       </div>
     </div>
 
-    <div class="container px-5 pt-5">
+    <div class="px-3 py-5">
+  <div class="row g-5">
+    <div class="col-lg-3 col-md-6 col-sm-12 p-5">
+      <img src="techcrunch.png" alt="">
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 p-5">
+      <img src="mashable.png" alt="">
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 p-5">
+      <img src="bizinsider.png" alt="">
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 p-5">
+      <img src="tnw.png" alt="">
+    </div>
+  </div>
+</div>
+
+    <!-- <div class="container px-5 pt-5">
       <div class="d-flex justify-content-between align-items-center flex-wrap">
         <img src="techcrunch.png" alt="techcrunch" height="30">
         <img src="mashable.png" alt="mashable" height="30">
         <img src="bizinsider.png" alt="bizinsider" height="30">
         <img src="tnw.png" alt="tnw" height="30">
-      </div>
+      </div> -->
 
 
     </div>
